# package_vs_code

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  setup.py
docs/: .buildinfo  index.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/source/: conf.py  index.rst
gestion_utilisateurs/: __init__.py  exceptions.py  gestion.py  utils.py
gestion_utilisateurs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_gestion.py  test_utils.py
