[tool.poetry]
name = "package_vs_code"
version = "0.1.1"
description = "Un exemple de package Python"
authors = ["Borghel <borghelborghel3@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "gestion_utilisateurs" }
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.2"
pre-commit = "^4.1.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[coverage]
branch = true
source = ["gestion_utilisateurs"]